tutto titolo h3 scritte tasti

--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
                 <div class="hero-inner">
                     <div class="hero-copy">
                         <h1 class="hero-title mt-0">
-                            Questo è il mio headline
+                            Headline per la mia landing page marketing
                         </h1>
+                        <h3 class="hero-title mt-0">
+                            questo è il mio h3 
+                        </h3>
                         <p class="hero-paragraph">
                             Questa è la mia descrizione. Questa è la mia descrizione. Questa è la mia descrizione.
                             Questa è la mia descrizione. Questa è la mia descrizione. Questa è la mia descrizione.
@@ -44,11 +47,11 @@
                         <div class="hero-cta">
 
                             <a id="init-preorder-top-home" class="button button-primary" href="preorder.html">
-                                Pre order now
+                                nuovo link 
                             </a>
 
                             <a id="init-get-in-touch" class="button" href="getintouch.html">
-                                Get in touch
+                                ordina adesso 
                             </a>
 
                         </div>
